[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"
authors = ["Danny Gale <danny.m.gale@gmail.com>"]
description = "A simple publish/subscribe event bus built on tokio's broadcast channels"
repository = "github.com/dannygale/tokio-pubsub/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
dashmap = "5.0.0"
futures = "0.3.19"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = [ "full" ]}
tokio-stream = "0.1.8"

[dev-dependencies]
tokio-test = "0.4.2"
